@@ -1,4 +1,4 @@
-GNU C Library NEWS -- history of user-visible changes.  2011-5-30
+GNU C Library NEWS -- history of user-visible changes.  2011-6-4
 Copyright (C) 1992-2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
@@ -18,7 +18,7 @@ Version 2.14
   12587, 12597, 12601, 12611, 12625, 12626, 12631, 12650, 12653, 12655,
   12660, 12671, 12681, 12684, 12685, 12711, 12713, 12714, 12717, 12723,
   12724, 12734, 12738, 12746, 12766, 12775, 12777, 12782, 12788, 12792,
-  12795, 12811, 12813, 12814
+  12795, 12811, 12813, 12814, 12841
 
 * The RPC implementation in libc is obsoleted.  Old programs keep working
   but new programs cannot be linked with the routines in libc anymore.
